
---

# ⚠️ Assure-toi que ton app Expo est déjà ouverte dans l’émulateur avant d’exécuter ce test.
# Avec Maestro, les assertions (assertVisible, assertNotVisible) ne sont pas limitées à une section précise de ta page.
# Elles vérifient dans tout l’écran rendu si le texte ou l’élément est présent ou non.


appId: host.exp.exponent
---

- tapOn:
    id: "checkbox-boat-name-hamzaShip"

- tapOn:
    id: nombreEquipageInput
- inputText: "15"
- tapOn:
    id: buttonAddEquipage

- tapOn:
    id: nombreEquipageInput
- eraseText
- inputText: "10"
- tapOn:
    id: buttonDeleteEquipage

- tapOn:
    id: nombreOrInput
- inputText: "205"
- tapOn:
    id: buttonAddOr

- tapOn:
    id: nombreOrInput
- eraseText
- inputText: "204"
- tapOn:
    id: buttonDeleteOr


