appId: host.exp.exponent
---

# ⚠️ Assure-toi que ton app Expo est déjà ouverte dans l’émulateur avant d’exécuter ce test. 
# Avec Maestro, les assertions (assertVisible, assertNotVisible) ne sont pas limitées à une section précise de ta page. 
# Elles vérifient dans tout l’écran rendu si le texte ou l’élément est présent ou non.
# donc techniquement on n’a pas à vérifier si les bateaux sont présents dans une section précise, 
# on vérifie simplement qu’ils apparaissent ou disparaissent dans l’UI globale.

- tapOn: "buttonSupprimer"
- assertNotVisible: "boat-name-hamzaShip" # c’est pour un amiral pirate donc on vérifie que le bateau n’est plus visible après suppression

- tapOn: "buttonModifier"
- assertVisible: "Formulaire Bateau" # ça va apparaître dans la page update après la redirection

- tapOn: "emailInput"
- inputText: "alain@example.com"

- tapOn: "NomduBateauInput"
- inputText: "yanyShip"

- tapOn: "CapitaineInput"
- inputText: "yanyCapitaine"

- tapOn: "OrDansLaCargaisonInput"
- inputText: "5000"

- tapOn: "TailleDeLEquipageInput"
- inputText: "50"

# ici pour le picker on clique sur le select et on choisit donc deux tapOn successifs
- tapOn: "StatusInput"
- tapOn: "SailingStatusOption"

- tapOn: "buttonAjouterBateau"
- assertVisible: "yanyShip"

# Sélectionner un bateau 1
- tapOn: "checkbox-123"   # coche le bateau avec id du bateau a chaque fois ça change 
# Sélectionner un bateau 2
- tapOn: "checkbox-123"   # coche le bateau avec id du bateau a chaque fois ça change 

# Transfert  argent entre bateaux
- tapOn: "nombreOrInput"
- inputText: "2000"
- tapOn: "buttonTransfererOr"
- assertVisible: "Transfert réussie de 2000" # texte exact affiché par ton code
